fix: adjust dropdown submenu positioning for better alignment

--- a/src/app/above-bar/above-bar.component.css
+++ b/src/app/above-bar/above-bar.component.css
@@ -21,7 +21,7 @@
 
 .dropdown-submenu:hover .dropdown-menu {
     display: block;
-    top: 10px;
+    top: 0px;
     left: -93%;
     margin-top: -8px;
 }
